# wasm-component-tutorial

./: .gitignore  README.md  composed.wasm
add/: Cargo.toml
add/src/: bindings.rs  lib.rs
add/wit/: world.wit
adder/: Cargo.toml
calculator/: Cargo.toml
calculator/src/: bindings.rs  lib.rs  raw_bindings.rs
calculator/wit/: world.wit
command/: Cargo.toml
command/src/: bindings.rs  main.rs
command/wit/: world.wit
sub/: Cargo.toml
sub/src/: bindings.rs  lib.rs
sub/wit/: world.wit
