[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.2"
wit-bindgen-rt = "0.22.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:calculator"

[package.metadata.component.dependencies]

[package.metadata.component.target]
path = "wit"
world = "calculator"

[package.metadata.component.target.dependencies]
"component:add" = { path = "../add/wit/world.wit" }
"component:sub" = { path = "../sub/wit/world.wit" }